--- a/intro_ipynd.ipynb
+++ b/intro_ipynd.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "intro.ipynd",
       "provenance": [],
-      "authorship_tag": "ABX9TyMdHH+NcwydHnJmsw6H8eQ7",
+      "authorship_tag": "ABX9TyO9QKjElkEaorbh8rr2wRLU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "outputId": "0e199147-ac6a-4f91-c473-862e02d3bce4"
       },
       "source": [
-        "print('jirachaya fongfoom id6130200380')\n"
+        "print('จิรัชญา ฟองฟูม id6130200380')\n"
       ],
       "execution_count": null,
       "outputs": [
